--- a/index.html
+++ b/index.html
@@ -5,15 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spell Checker</title>
     <style>
+        /* General Body Styling */
         body {
             font-family: Arial, sans-serif;
+            background-color: #f5f5f5; /* Light gray background */
             padding: 20px;
+            color: #333; /* Dark text color for readability */
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
+
+        h1 {
+            color: #4CAF50; /* Vibrant Green for heading */
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-size: 18px;
+            color: #333;
+            margin-right: 10px;
+        }
+
+        /* Input Field Styling */
+        #inputWord {
+            padding: 10px;
+            font-size: 18px;
+            border-radius: 5px;
+            border: 2px solid #4CAF50;
+            outline: none;
+            margin-right: 10px;
+            width: 250px;
+            transition: border-color 0.3s ease;
+        }
+
+        #inputWord:focus {
+            border-color: #FF5722; /* Change border color on focus */
+        }
+
+        /* Button Styling */
+        button {
+            background-color: #FF5722; /* Vibrant Orange */
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 18px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #FF7043; /* Slightly lighter orange on hover */
+        }
+
+        /* Result Container */
         #result {
             margin-top: 20px;
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 60%;
+            max-width: 400px;
+            text-align: center;
         }
+
+        /* Suggestions Styling */
         .word-suggestion {
+            background-color: #4CAF50;
+            color: white;
+            padding: 8px;
             margin: 5px 0;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        .word-suggestion:hover {
+            background-color: #45a049;
+        }
+
+        /* Error Message Styling */
+        .error {
+            color: #FF5722;
+            font-size: 16px;
         }
     </style>
 </head>
