--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <h1>Spell Checker</h1>
     <label for="inputWord">Enter a word:</label>
     <input type="text" id="inputWord" placeholder="Type a word" />
-    <button onclick="getSuggestions()">Get Suggestions</button>
+    <button onclick="getSuggestions()">Spell Check</button>
 
     <div id="result"></div>
 
